--- a/.env.local
+++ b/.env.local
@@ -9,8 +9,10 @@ NEXT_PUBLIC_GATEWAY_URL="fuchsia-quiet-parakeet-709.mypinata.cloud"
 MONGODB_URI="mongodb://localhost:27017/storify"
 NEXT_PUBLIC_PADDLE_CLIENT_TOKEN="test_11395f5a357f0e45b370ec99923"
 PADDLE_API_KEY="pdl_sdbx_apikey_01jvbjr6c1mxh081shhcea8zbj_EktRVcRGjpZf27nXwtw0x9_A73"
-PADDLE_PRODUCT_ID=
-PADDLE_SUBSCRIPTION_WEBHOOK_SECRET_KEY=
+PADDLE_PRODUCT_ID="pro_01jvbk03dyf8ksxn07emr13fd6"
+PADDLE_SUBSCRIPTION_WEBHOOK_SECRET_KEY="ntfset_01jvedkq2a2jc5bzj59pkqsbwc"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
 
 # export const NEXT_PUBLIC_PADDLE_CLIENT_TOKEN =
 #   process.env.NEXT_PUBLIC_PADDLE_CLIENT_TOKEN || "";
